--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,32 @@
               "projects/ui-kit/**/*.html"
             ]
           }
+        },
+        "storybook": {
+          "builder": "@storybook/angular:start-storybook",
+          "options": {
+            "configDir": ".storybook",
+            "browserTarget": "ui-kit:build",
+            "compodoc": true,
+            "compodocArgs": [
+              "-e",
+              "json"
+            ],
+            "port": 6006
+          }
+        },
+        "build-storybook": {
+          "builder": "@storybook/angular:build-storybook",
+          "options": {
+            "configDir": ".storybook",
+            "browserTarget": "ui-kit:build",
+            "compodoc": true,
+            "compodocArgs": [
+              "-e",
+              "json"
+            ],
+            "outputDir": "storybook-static"
+          }
         }
       }
     }
