--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prettier": "prettier --write \"projects/ui-kit/src/**/*.ts\"",
     "lint": "eslint --fix --ext .js,.ts \"projects/ui-kit/src/\"",
     "format": "npm run prettier && npm run lint",
-    "postversion": "mw -r ../package.json . && mw -r ../npm-shrinkwrap.json ."
+    "postversion": "mw -r ../package.json . && mw -r ../npm-shrinkwrap.json .",
+    "storybook": "ng run ui-kit:storybook",
+    "build-storybook": "ng run ui-kit:build-storybook"
   },
   "lint-staged": {
     "*.ts": [
@@ -45,9 +47,17 @@
     "@babel/eslint-parser": "^7.22.10",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@compodoc/compodoc": "^1.1.22",
     "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
     "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@storybook/addon-docs": "^7.5.0",
+    "@storybook/addon-essentials": "^7.5.0",
+    "@storybook/addon-interactions": "^7.5.0",
+    "@storybook/addon-links": "^7.5.0",
+    "@storybook/angular": "^7.5.0",
+    "@storybook/blocks": "^7.5.0",
+    "@storybook/testing-library": "^0.2.2",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
@@ -55,6 +65,7 @@
     "commitlint": "^17.7.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.44.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
@@ -65,7 +76,10 @@
     "lint-staged": "^14.0.0",
     "ng-packagr": "^16.2.0",
     "prettier": "^3.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "semantic-release": "^21.0.9",
+    "storybook": "^7.5.0",
     "typescript": "~5.1.3"
   },
   "config": {
