feat(hydro-21497): setup compodoc for new UI components

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "lint": "eslint --fix --ext .js,.ts \"projects/ui-kit/src/\"",
     "format": "npm run prettier && npm run lint",
     "postversion": "mw -r ../package.json . && mw -r ../npm-shrinkwrap.json .",
-    "storybook": "ng run ui-kit:storybook",
-    "build-storybook": "ng run ui-kit:build-storybook"
+    "storybook:serve": "ng run ui-kit:storybook",
+    "storybook:build": "ng run ui-kit:build-storybook",
+    "compodoc:serve": "compodoc -p tsconfig.doc.json -s",
+    "compodoc:build": "compodoc -p tsconfig.doc.json"
   },
   "lint-staged": {
     "*.ts": [
