--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,9 @@
           "options": {
             "configDir": ".storybook",
             "browserTarget": "ui-kit:build",
+            "styles": [
+              "projects/ui-kit/src/styles/index.scss"
+            ],
             "compodoc": true,
             "compodocArgs": [
               "-e",
@@ -51,13 +54,27 @@
           "options": {
             "configDir": ".storybook",
             "browserTarget": "ui-kit:build",
+            "styles": [
+              "projects/ui-kit/src/styles/index.scss"
+            ],
             "compodoc": true,
             "compodocArgs": [
               "-e",
               "json"
             ],
-            "outputDir": "storybook-static"
+            "outputDir": "dist/storybook"
           }
+        }
+      },
+      "schematics": {
+        "@schematics/angular:component": {
+          "standalone": true
+        },
+        "@schematics/angular:directive": {
+          "standalone": true
+        },
+        "@schematics/angular:pipe": {
+          "standalone": true
         }
       }
     }
@@ -66,5 +83,10 @@
     "schematicCollections": [
       "@angular-eslint/schematics"
     ]
+  },
+  "schematics": {
+    "@schematics/angular:component": {
+      "style": "scss"
+    }
   }
 }
