--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "lint": "eslint --fix --ext .js,.ts \"projects/ui-kit/src/\"",
     "format": "npm run prettier && npm run lint",
     "postversion": "mw -r ../package.json . && mw -r ../npm-shrinkwrap.json .",
-    "storybook:serve": "ng run ui-kit:storybook",
-    "storybook:build": "ng run ui-kit:build-storybook",
-    "compodoc:serve": "compodoc -p tsconfig.doc.json -s -r 3202",
-    "compodoc:build": "compodoc -p tsconfig.doc.json"
+    "storybook": "ng run ui-kit:storybook",
+    "build:storybook": "ng run ui-kit:build-storybook",
+    "compodoc": "compodoc -p tsconfig.doc.json -s -r 3202",
+    "build:compodoc": "compodoc -p tsconfig.doc.json -d dist/compodoc"
   },
   "lint-staged": {
     "*.ts": [
@@ -26,10 +26,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.9",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.9",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
@@ -53,10 +55,13 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@storybook/addon-a11y": "^7.5.1",
     "@storybook/addon-docs": "^7.5.0",
     "@storybook/addon-essentials": "^7.5.0",
     "@storybook/addon-interactions": "^7.5.0",
     "@storybook/addon-links": "^7.5.0",
+    "@storybook/addon-styling-webpack": "^0.0.5",
+    "@storybook/addon-themes": "^7.5.1",
     "@storybook/angular": "^7.5.0",
     "@storybook/blocks": "^7.5.0",
     "@storybook/testing-library": "^0.2.2",
@@ -65,6 +70,7 @@
     "@typescript-eslint/parser": "5.62.0",
     "commitizen": "^4.3.0",
     "commitlint": "^17.7.1",
+    "css-loader": "^6.8.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.44.0",
     "eslint-plugin-storybook": "^0.6.15",
@@ -76,12 +82,14 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "lint-staged": "^14.0.0",
+    "lodash": "^4.17.21",
     "ng-packagr": "^16.2.0",
     "prettier": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "semantic-release": "^21.0.9",
     "storybook": "^7.5.0",
+    "style-loader": "^3.3.3",
     "typescript": "~5.1.3"
   },
   "config": {
