--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,12 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
+    "strictPropertyInitialization": false,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
+    "resolveJsonModule": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
