--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,38 +1,91 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module",
-        "project": "tslint.json"
-    },
-    "plugins": [
-        "@typescript-eslint",
-        "@angular-eslint"
-    ],
-    "rules": {
-        "indent": [
-            "error",
-            "tab"
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
-    }
+	"root": true,
+	"ignorePatterns": ["**/*.json"],
+	"plugins": [
+		"unused-imports"
+	],
+	"overrides": [
+		{
+			"files": [
+				"*.ts"
+			],
+			"extends": [
+				"eslint:recommended",
+				"plugin:@typescript-eslint/recommended",
+				"plugin:@angular-eslint/recommended",
+				"plugin:@angular-eslint/template/process-inline-templates",
+				"plugin:prettier/recommended",
+				"plugin:import/recommended",
+				"plugin:import/warnings"
+			],
+			"rules": {
+				"@angular-eslint/directive-selector": [
+					"error",
+					{
+						"type": "attribute",
+						"prefix": "q9",
+						"style": "camelCase"
+					}
+				],
+				"@angular-eslint/component-selector": [
+					"error",
+					{
+						"type": "element",
+						"prefix": "q9",
+						"style": "kebab-case"
+					}
+				],
+				"import/no-unresolved": "off",
+				"import/order": [
+					"error",
+					{
+						"newlines-between": "always",
+						"alphabetize": {
+							"order": "asc",
+							"caseInsensitive": true
+						},
+						"groups": [
+							[
+								"external",
+								"builtin"
+							],
+							[
+								"index",
+								"parent",
+								"sibling",
+								"internal"
+							],
+							"object",
+							"type"
+						]
+					}
+				],
+				"unused-imports/no-unused-imports": "error"
+			}
+		},
+		{
+			"files": [
+				"*.html"
+			],
+			"excludedFiles": [
+				"*inline-template-*.component.html"
+			],
+			"extends": [
+				"plugin:@angular-eslint/template/recommended",
+				"plugin:@angular-eslint/template/accessibility",
+				"plugin:prettier/recommended"
+			],
+			"rules": {
+				"prettier/prettier": [
+					"error",
+					{
+						"parser": "angular"
+					}
+				]
+			}
+		}
+	],
+	"extends": [
+		"plugin:storybook/recommended"
+	]
 }
