--- a/package.json
+++ b/package.json
@@ -6,19 +6,16 @@
     "start": "ng serve",
     "build": "ng build ui-kit",
     "publish": "npm publish projects/ui-kit/dist",
-    "clean": "rm -rf dist node_modules package-lock.json",
-    "prepare": "husky install",
-    "prettier": "prettier --write \"projects/ui-kit/src/**/*.ts\"",
-    "lint": "eslint --fix --ext .js,.ts \"projects/ui-kit/src/\"",
-    "format": "npm run prettier && npm run lint",
-    "postversion": "mw -r ../package.json . && mw -r ../npm-shrinkwrap.json ."
-  },
-  "lint-staged": {
-    "*.ts": [
-      "npm run format",
-      "git add"
-    ]
-  },
+		"prepare": "husky install",
+		"lint": "eslint --fix",
+		"prettier": "prettier --write"
+	},
+	"lint-staged": {
+		"./**/*.{ts,scss,html,json}": [
+			"npm run lint",
+			"npm run prettier"
+		]
+	},
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
@@ -42,30 +39,35 @@
     "@angular-eslint/template-parser": "16.1.0",
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
-    "@babel/eslint-parser": "^7.22.10",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/exec": "^6.0.3",
+		"@semantic-release/exec": "^6.0.3",
+		"@semantic-release/git": "^10.0.1",
     "@types/jasmine": "~4.3.0",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
-    "commitizen": "^4.3.0",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
+		"commitizen": "^4.3.0",
     "commitlint": "^17.7.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.44.0",
-    "husky": "^8.0.3",
-    "jasmine-core": "~4.6.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-import": "^2.29.0",
+		"eslint-plugin-prettier": "^5.0.1",
+		"eslint-plugin-storybook": "^0.6.15",
+		"eslint-plugin-unused-imports": "^3.0.0",
+		"husky": "^8.0.0",
+		"jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "lint-staged": "^14.0.0",
-    "ng-packagr": "^16.2.0",
+		"lint-staged": "^14.0.1",
+		"ng-packagr": "^16.2.0",
     "prettier": "^3.0.1",
-    "semantic-release": "^21.0.9",
+		"prettier-eslint": "^16.1.1",
+		"semantic-release": "^21.0.9",
     "typescript": "~5.1.3"
   },
   "config": {
