refactor(hydro-21867): refactored stories for select component and button component

--- a/projects/ui-kit/tsconfig.lib.json
+++ b/projects/ui-kit/tsconfig.lib.json
@@ -6,7 +6,8 @@
 		"declaration": true,
 		"declarationMap": true,
 		"inlineSources": true,
-		"noImplicitAny": true
+		"noImplicitAny": true,
+		"skipLibCheck": true
 	},
 	"exclude": ["**/*.spec.ts", "**/*.stories.ts"]
 }
