--- a/projects/ui-kit/package.json
+++ b/projects/ui-kit/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@ngx-translate/core": "^15.0.0",
+    "ngx-cookie-service": "^16.0.0",
     "tslib": "^2.3.0"
   },
   "sideEffects": false,
