refactor(hydro-21867): changed code to rkhomchenko

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-//npm.pkg.github.com/:_authToken=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
-@Q9Elements:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=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
+@rkhomchenko:registry=https://npm.pkg.github.com
