--- a/package.json
+++ b/package.json
@@ -107,6 +107,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:Q9Elements/ui-kit.git"
+    "url": "git@github.com:rkhomchenko/ui-kit.git"
   }
 }
