--- a/.releaserc
+++ b/.releaserc
@@ -1,6 +1,8 @@
 {
   "branches": [
-    "master"
+    "master",
+    {name: "epic/HYDRO-*", prerelease: true},
+    {name: "release/**", prerelease: true}
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
