ci(21867): update semantic release configuration for the local deployment and automated release flow

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build ui-kit",
-    "publish": "npm run build && npm publish dist/ui-kit",
+    "publish": "npm publish dist/ui-kit",
+    "release:prod": "npx semantic-release",
+    "release:local": "LOCAL=true npx semantic-release",
     "prepare": "husky install && npm run translate",
     "lint": "eslint --fix",
     "prettier": "prettier --write",
