--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
           token: "${{ secrets.GITHUB_TOKEN }}"
       - run: npm install --immutable
       - name: Run semantic-release
-        run: npx semantic-release
+        run: npm run release:prod
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
