ci(npm): changed personal token

--- a/package.json
+++ b/package.json
@@ -109,6 +109,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:rkhomchenko/ui-kit.git"
+    "url": "https://github.com/rkhomchenko/ui-kit.git"
   }
 }
