feat: fixing ci cd

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-//npm.pkg.github.com/:_authToken=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
-@rkhomchenko:registry=https://npm.pkg.github.com
+@rkhomchenko:registry=https://npm.pkg.github.com/
+//npm.pkg.github.com/:_authToken=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
