--- a/projects/ui-kit/package.json
+++ b/projects/ui-kit/package.json
@@ -12,6 +12,10 @@
     "tslib": "^2.3.0"
   },
   "sideEffects": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rkhomchenko/ui-kit.git"
+  },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   }
