fix: fixed ci cd

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
           fetch-depth: 0
           token: "${{ secrets.GITHUB_TOKEN }}"
       - run: npm install --immutable --ignore-scripts
+      - run: echo ${{ secrets.GITHUB_TOKEN }}
       - name: Run semantic-release
         run: npm run release:prod
         env:
