--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build ui-kit",
-    "publish:package": "npm publish dist/ui-kit/",
+    "publish": "cd dist/ui-kit/ && npm publish",
     "release:prod": "npx semantic-release",
     "release:local": "LOCAL=1 npx semantic-release",
     "prepare": "husky install && npm run translate",
