--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,1 @@
-//npm.pkg.github.com/:_authToken=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
-@Q9Elements:registry=https://npm.pkg.github.com
+//registry.npmjs.org/:_authToken=71f655cc-ea55-4335-bf29-4cb8fcbd0cc0
