--- a/projects/ui-kit/package.json
+++ b/projects/ui-kit/package.json
@@ -12,7 +12,8 @@
     "tslib": "^2.3.0"
   },
   "sideEffects": false,
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Q9Elements/ui-kit.git"
   }
 }
